# GranularFX

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
Source/: GranularEngine.h  LookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
